Fix mis-alignment of "Clear cache" button when homepage not present
git-svn-id: http://svn.radiantcms.org/radiant/trunk@484 6226cccd-6db4-da11-80d6-0014220fd306

--- a/radiant/public/stylesheets/admin/main.css
+++ b/radiant/public/stylesheets/admin/main.css
@@ -4,7 +4,7 @@ body {
   margin: 0;
   padding: 0;
 }
-img { 
+img, input[type='image'] { 
 	border: 0;
 	vertical-align: middle; 
 }
